--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "http-status-codes": "^2.2.0",
     "winston": "^3.6.0"
