Fin logica actualizacion usuario, imagen de usuario, y modificacion password

--- a/Backend/.env
+++ b/Backend/.env
@@ -7,3 +7,4 @@ DBUSER=gveterinaria
 DBPASSWORD=veterinariaGestor
 DBDATABASE=gveterinaria
 Secret_JWT=veterinaria_aplicacion.
+dirUploads=D:\fandr\Projects\Gestor_Veterinaria\Gestor_veterinaria\src\assets
