--- a/Backend/package.json
+++ b/Backend/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "http-status-codes": "^2.2.0",
+    "multer": "^1.4.4",
     "winston": "^3.6.0"
   }
 }
