--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,8 @@
     "express": "^4.17.3",
     "http-status-codes": "^2.2.0",
     "multer": "^1.4.4",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.18.0",
     "winston": "^3.6.0"
   }
 }
