--- a/gestor_veterinaria/package.json
+++ b/gestor_veterinaria/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "apexcharts": "^3.35.0",
     "bootstrap-icons": "^1.8.1",
+    "ng-apexcharts": "^1.7.1",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.7",
     "tslib": "^2.3.0",
@@ -39,6 +41,7 @@
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.2"
+    "typescript": "~4.6.2",
+    "webpack-dev-server": "^4.8.1"
   }
 }
